# guile-num

./: .cvsignore  AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README  TODO  aclocal.m4  autogen.sh  configure.ac  configure.in  destill.scm  pre-inst-guile.in  test_fftw.scm  test_finance_account.scm  test_gsl_blas.scm  test_gsl_chebyshev.scm  test_gsl_diff.scm  test_gsl_fit.scm  test_gsl_integration.scm  test_gsl_interp.scm  test_gsl_math.scm  test_gsl_minimize.scm  test_gsl_monte.scm  test_gsl_multimin.scm  test_gsl_multiroots.scm  test_gsl_odeiv.scm  test_gsl_qrng.scm  test_gsl_rng.scm  test_gsl_roots.scm  test_gsl_statistics.scm  test_lapack.scm  test_plot_gnuplot.scm  test_signal_filter.scm
debian/: changelog  control  copyright  rules
fftw/: .cvsignore  Makefile.am  fftw.i
finance/: Makefile.am  account.scm  finance.scm
gsl/: .cvsignore  Makefile  Makefile.am  blas.i  block.i  chebyshev.i  combination.i  dht.i  diff.i  eigen.i  errno.i  fft.i  fit.i  function.i  gsl.scm  gsl_blas.i  gsl_block.i  gsl_chebyshev.i  gsl_combination.i  gsl_dht.i  gsl_diff.i  gsl_eigen.i  gsl_errno.i  gsl_fft.i  gsl_fit.i  gsl_function.i  gsl_histogram.i  gsl_histogram2d.i  gsl_integration.i  gsl_interp.i  gsl_levin.i  gsl_linalg.i  gsl_math.i  gsl_matrix.i  gsl_min.i  gsl_minimize.i  gsl_monte.i  gsl_multifit.i  gsl_multimin.i  gsl_multiroot_function.i  (+44 more)
lapack/: .cvsignore  Makefile  Makefile.am  gsl_lapack.i  guile-lapack.scm  lapack.i  lapack.scm
math/: Makefile.am  array-fun.scm  const.scm
plot/: Makefile.am  gnuplot.scm
signal/: Makefile.am  butter.scm  dpcm.scm  filter.scm  sine-generator.scm  test-dpcm.scm  test-vco.scm  vco.scm
sound/: .cvsignore  Makefile  Makefile.am  conversion.scm  sndfile.i
testfun/: Makefile.am  unit-test.scm
