SUBDIRS = finance gsl lapack math plot signal sound

EXTRA_DIST = test_finance_account.scm test_gsl_blas.scm test_gsl_chebyshev.scm test_gsl_diff.scm test_gsl_fit.scm test_gsl_integration.scm test_gsl_interp.scm test_gsl_math.scm test_gsl_minimize.scm test_gsl_monte.scm test_gsl_multimin.scm test_gsl_multiroots.scm test_gsl_odeiv.scm test_gsl_qrng.scm test_gsl_rng.scm test_gsl_roots.scm test_gsl_statistics.scm test_lapack.scm test_plot_gnuplot.scm test_signal_filter.scm ##test_sound_sndfile.scm
