AC_INIT
AM_INIT_AUTOMAKE("guile-numerics", "0.2.0")
AC_PREREQ(2.54)
AC_CONFIG_SRCDIR("test_gsl_blas.scm")

AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_PROG_CC
AC_ISC_POSIX
AC_PROG_F77
AC_F77_LIBRARY_LDFLAGS
AC_PROG_LIBTOOL

CFLAGS="$CFLAGS `gsl-config --cflags`"
LIBS="$LIBS `gsl-config --libs`"

CFLAGS="$CFLAGS `guile-config compile`"
LIBS="$LIBS `guile-config link`"

dnl pkgdatadir="$datadir/guile"

AC_CONFIG_FILES([Makefile finance/Makefile fftw/Makefile gsl/Makefile
		 lapack/Makefile math/Makefile plot/Makefile
		 signal/Makefile sound/Makefile])
AC_OUTPUT
